# AppAgentCards

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SPEC-OPEN-QUESTIONS.md  SPEC.md  pyproject.toml
agents/: __init__.py  _adb.py  _recorder.py  action_planner.py  appcards_agent.py  capability_router.py  card_loader.py  flow_runner.py
android/: .gitignore  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/manifests/: com.xingin.xhs.yaml  ctrip.android.view.yaml
android/app/src/main/java/com/appagentcards/: AppAgentCardsApplication.kt
android/app/src/main/java/com/appagentcards/data/local/: ManifestAssetLoader.kt  ManifestDao.kt  ManifestDatabase.kt  ManifestEntity.kt
android/app/src/main/java/com/appagentcards/data/model/: ManifestDto.kt
android/app/src/main/java/com/appagentcards/data/parser/: ManifestParser.kt
android/app/src/main/java/com/appagentcards/data/remote/: ManifestRemoteDataSource.kt
android/app/src/main/java/com/appagentcards/data/repository/: ManifestRepository.kt
android/app/src/main/java/com/appagentcards/data/validator/: SchemaValidator.kt
android/app/src/main/java/com/appagentcards/di/: AppModule.kt  DataModule.kt  DomainModule.kt  ServiceModule.kt
android/app/src/main/java/com/appagentcards/domain/engine/: CoordinateRemapper.kt  IntentMatcher.kt  PromptTemplateEngine.kt  SafetyEnforcer.kt  StalenessChecker.kt
android/app/src/main/java/com/appagentcards/domain/model/: Capability.kt  Card.kt  DeviceMetrics.kt  ExecutionPlan.kt  RoutingCandidate.kt  SafetyAssessment.kt  Selector.kt  Step.kt
android/app/src/main/java/com/appagentcards/domain/usecase/: BuildExecutionPlanUseCase.kt  MatchIntentUseCase.kt
android/app/src/main/java/com/appagentcards/presentation/: MainActivity.kt
android/app/src/main/java/com/appagentcards/presentation/navigation/: NavGraph.kt
android/app/src/main/java/com/appagentcards/presentation/ui/execution/: ExecutionScreen.kt  ExecutionViewModel.kt
android/app/src/main/java/com/appagentcards/presentation/ui/home/: HomeScreen.kt  HomeViewModel.kt
android/app/src/main/java/com/appagentcards/presentation/ui/routing/: RoutingResultScreen.kt  RoutingResultViewModel.kt
android/app/src/main/java/com/appagentcards/presentation/ui/settings/: SettingsScreen.kt  SettingsViewModel.kt
android/app/src/main/java/com/appagentcards/presentation/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/com/appagentcards/service/: AgentCardAccessibilityService.kt
android/app/src/main/java/com/appagentcards/service/executor/: AccessibilityActionExecutor.kt  BlockerDismisser.kt  GesturePerformer.kt  NodeMatcher.kt  SelectorResolver.kt  WaitController.kt
android/app/src/main/java/com/appagentcards/service/model/: ExecutionState.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
examples/: match_intent.py
manifests/: cn.wps.moffice_eng.yaml  com.aliyun.tongyi.yaml  com.autonavi.minimap.yaml  com.taobao.taobao.yaml  com.tencent.mm.yaml  com.xingin.xhs.yaml  ctrip.android.view.yaml
manifests/_flows/: wechat_to_wps_summary.yaml  xhs_to_amap_coffee.yaml  xhs_to_amap_place.yaml
scripts/: run_all_caps.sh  run_flow.py  run_nl.py  run_test.py
spec/: schema.json
tests/: config.py  test_manifest_cli.py  test_manifest_real_adb.py
