[project]
name = "appagentcards"
version = "0.1.0"
description = "Community registry of machine-readable cards describing AI agents embedded inside mobile apps"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Jingsheng Yan", email = "yan.jingsheng@outlook.com" },
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/jingsheng-yan/AppAgentCards"
Repository = "https://github.com/jingsheng-yan/AppAgentCards"
Issues = "https://github.com/jingsheng-yan/AppAgentCards/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
